change text index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </nav>
     <div class="container">
         <h2>Bem-vindo à Faculdade Tech</h2>
-        <p>Explore nossos cursos e invista no seu futuro.</p>
+        <p>Explore nossos cursos e invista no seu futuro!</p>
         <a href="cursos.html" class="btn">Saiba Mais</a>
     </div>
     <footer>
